# Glider

./: .gitignore  .gitmodules  CHANGES.txt  README.md
fw/: .cproject  .mxproject  .project  CMakeLists.txt  STM32H750VBTX_FLASH.ld  STM32H750VBTX_RAM.ld  adv7611.c  adv7611.h  bitstream.c  bitstream.h  button.c  button.h  caster.c  caster.h  config.h  edid.c  edid.h  fpga.c  fpga.h  fusb302.c  fusb302.h  fw.c  glider_ec_rtos Debug.launch  glider_ec_rtos.ioc  iap.c  iap.h  max17135.c  max17135.h  power.c  power.h  ptn3460.c  ptn3460.h  tcpm_driver.c  tcpm_driver.h  tps65185.c  tps65185.h  usb_mux.c  usb_mux.h  usb_pd.h  usb_pd_driver.c  (+8 more)
fw/Core/Inc/: FreeRTOSConfig.h  main.h  stm32_assert.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
fw/Core/Src/: freertos.c  main.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c
fw/User/: adv7611.c  adv7611.h  app.h  app_main.c  app_main.h  board.c  board.h  button.c  button.h  caster.c  caster.h  config.c  config.h  crc16.c  edid.c  edid.c.hardcoded  edid.h  error.c  error.h  fonts.h  fpga.c  fpga.h  pal_i2c.c  pal_i2c.h  platform.h  power.c  power.h  ptn3460.c  ptn3460.h  spiffs_config.h  spiflash.c  spiflash.h  syslog.c  syslog.h  tusb_config.h  ui.c  ui.h  usb_descriptors.c  usbapp.c  usbapp.h  (+3 more)
fw/User/fonts/: font_8x14.c
fw/User/shell/: linenoise.c  linenoise.h  shell.c  shell.h  shell_cfg.h  shell_cmds.c  shell_platform.c  shell_platform.h  shell_printf.c  shell_printf.h  shell_string.c  shell_string.h  term.c  term.h  type.h
fw/User/usbpd/: fusb302.c  tcpm.h  tcpm_driver.c  usb_mux.c  usb_pd.h  usb_pd_driver.c  usb_pd_driver.h  usb_pd_policy.c  usb_pd_protocol.c
fw/User/xmodem/: xmodem.c  xmodem.h  xymodem.txt
(+149 files in other folders)
